--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                 </p>
                 <div class="lecture-links">
                   <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
+                    href="https://www.youtube.com/watch?v=Fy2u9oCNZ1E"
                     class="lecture-link-btn video-link"
                     target="_blank"
                   >
@@ -395,7 +395,7 @@
                 </p>
                 <div class="lecture-links">
                   <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
+                    href="https://www.youtube.com/watch?v=nhwsAOEidik"
                     class="lecture-link-btn video-link"
                     target="_blank"
                   >
@@ -429,107 +429,6 @@
                 </div>
               </div>
             </div>
-            <!-- <div class="lecture-card">
-              <div class="lecture-number">04</div>
-              <div class="lecture-content">
-                <h4>
-                  <a href="Lectures/html/lecture-04.html"
-                    >Introduction to ARM Assembly</a
-                  >
-                </h4>
-                <p class="lecture-instructor">By Dr. Kisaru Liyanage</p>
-                <p>
-                  This lecture provides an introduction to ARM Assembly language
-                  programming, and covers the core concept of computer
-                  instructions. By Dr. Kisaru Liyanage.
-                </p>
-                <div class="lecture-links">
-                  <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
-                    class="lecture-link-btn video-link"
-                    target="_blank"
-                  >
-                    <svg
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                    >
-                      <polygon points="5 3 19 12 5 21 5 3"></polygon>
-                    </svg>
-                    Watch Video
-                  </a>
-                  <a
-                    href="Lectures/html/lecture-04.html"
-                    class="lecture-link-btn notes-link"
-                  >
-                    <svg
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                    >
-                      <path
-                        d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
-                      ></path>
-                      <polyline points="14 2 14 8 20 8"></polyline>
-                    </svg>
-                    Read Notes
-                  </a>
-                </div>
-              </div>
-            </div> -->
-            <!-- <div class="lecture-card">
-              <div class="lecture-number">05</div>
-              <div class="lecture-content">
-                <h4>
-                  <a href="Lectures/html/lecture-05.html"
-                    >Number Representation and Data Processing</a
-                  >
-                </h4>
-                <p class="lecture-instructor">By Dr. Kisaru Liyanage</p>
-                <p>
-                  This lecture covers the number representation in an ARM CPU,
-                  and introduces data processing instructions for arithmetic and
-                  logic operations.
-                </p>
-                <div class="lecture-links">
-                  <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
-                    class="lecture-link-btn video-link"
-                    target="_blank"
-                  >
-                    <svg
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                    >
-                      <polygon points="5 3 19 12 5 21 5 3"></polygon>
-                    </svg>
-                    Watch Video
-                  </a>
-                  <a
-                    href="Lectures/html/lecture-05.html"
-                    class="lecture-link-btn notes-link"
-                  >
-                    <svg
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                    >
-                      <path
-                        d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
-                      ></path>
-                      <polyline points="14 2 14 8 20 8"></polyline>
-                    </svg>
-                    Read Notes
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div> -->
 
           <!-- Lectures 4-8: Programming Concepts -->
           <div class="lecture-category">
@@ -550,7 +449,7 @@
                 </p>
                 <div class="lecture-links">
                   <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
+                    href="https://www.youtube.com/watch?v=s1X7Rr7rzag"
                     class="lecture-link-btn video-link"
                     target="_blank"
                   >
@@ -600,7 +499,7 @@
                 </p>
                 <div class="lecture-links">
                   <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
+                    href="https://www.youtube.com/watch?v=rCS3oXcQPKo"
                     class="lecture-link-btn video-link"
                     target="_blank"
                   >
@@ -647,7 +546,7 @@
                 </p>
                 <div class="lecture-links">
                   <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
+                    href="https://www.youtube.com/watch?v=aFCmb1CNnV8"
                     class="lecture-link-btn video-link"
                     target="_blank"
                   >
@@ -696,7 +595,7 @@
                 </p>
                 <div class="lecture-links">
                   <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
+                    href="https://www.youtube.com/watch?v=T99xSt2ryKs"
                     class="lecture-link-btn video-link"
                     target="_blank"
                   >
@@ -743,7 +642,7 @@
                 </p>
                 <div class="lecture-links">
                   <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
+                    href="https://www.youtube.com/watch?v=IxaTbKoCr1Y"
                     class="lecture-link-btn video-link"
                     target="_blank"
                   >
@@ -800,7 +699,7 @@
                 </p>
                 <div class="lecture-links">
                   <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
+                    href="https://www.youtube.com/watch?v=v9az9n9UUD4"
                     class="lecture-link-btn video-link"
                     target="_blank"
                   >
@@ -851,7 +750,7 @@
                 </p>
                 <div class="lecture-links">
                   <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
+                    href="https://www.youtube.com/watch?v=ZURjn6FyzkI"
                     class="lecture-link-btn video-link"
                     target="_blank"
                   >
@@ -904,7 +803,7 @@
                 </p>
                 <div class="lecture-links">
                   <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
+                    href="https://www.youtube.com/watch?v=TegJ2TBihPw"
                     class="lecture-link-btn video-link"
                     target="_blank"
                   >
@@ -957,7 +856,7 @@
                 </p>
                 <div class="lecture-links">
                   <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
+                    href="https://www.youtube.com/watch?v=l3GqbXXB2QA"
                     class="lecture-link-btn video-link"
                     target="_blank"
                   >
@@ -1010,7 +909,7 @@
                 </p>
                 <div class="lecture-links">
                   <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
+                    href="https://www.youtube.com/watch?v=JSZYac-xI5g"
                     class="lecture-link-btn video-link"
                     target="_blank"
                   >
@@ -1065,7 +964,7 @@
                 </p>
                 <div class="lecture-links">
                   <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
+                    href="https://www.youtube.com/watch?v=vCbnFagcXjo"
                     class="lecture-link-btn video-link"
                     target="_blank"
                   >
@@ -1118,7 +1017,7 @@
                 </p>
                 <div class="lecture-links">
                   <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
+                    href="https://www.youtube.com/watch?v=BJY8nzyNMAY"
                     class="lecture-link-btn video-link"
                     target="_blank"
                   >
@@ -1167,7 +1066,7 @@
                 </p>
                 <div class="lecture-links">
                   <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
+                    href="https://www.youtube.com/watch?v=eez7NbgXk9g"
                     class="lecture-link-btn video-link"
                     target="_blank"
                   >
@@ -1216,7 +1115,7 @@
                 </p>
                 <div class="lecture-links">
                   <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
+                    href="https://www.youtube.com/watch?v=p6BmMrDKmTE"
                     class="lecture-link-btn video-link"
                     target="_blank"
                   >
@@ -1263,7 +1162,7 @@
                 </p>
                 <div class="lecture-links">
                   <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
+                    href="https://www.youtube.com/watch?v=O3hgbPAQhvE"
                     class="lecture-link-btn video-link"
                     target="_blank"
                   >
@@ -1315,7 +1214,7 @@
                 </p>
                 <div class="lecture-links">
                   <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
+                    href="https://www.youtube.com/watch?v=EcjOuKKF5eE"
                     class="lecture-link-btn video-link"
                     target="_blank"
                   >
@@ -1366,7 +1265,7 @@
                 </p>
                 <div class="lecture-links">
                   <a
-                    href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID_HERE"
+                    href="https://www.youtube.com/watch?v=hte_h1SxhYY"
                     class="lecture-link-btn video-link"
                     target="_blank"
                   >
