--- a/index.html
+++ b/index.html
@@ -1306,8 +1306,11 @@
       <section class="instructor-section">
         <div class="instructor-info">
           <h2>About the Author</h2>
-          <div class="instructor-card">
-            <div class="instructor-details">
+            <div class="instructor-card" style="display:flex; align-items:flex-start; gap:2rem;">
+              <div class="instructor-image" style="flex:0 0 140px; max-width:140px;">
+                <img src="Lectures/img/isuru-nawinne.png" alt="Dr. Isuru Nawinne" style="width:100%; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.08);">
+              </div>
+              <div class="instructor-details" style="flex:1;">
               <h4>Dr. Isuru Nawinne</h4>
               <p class="instructor-title">
                 Senior Lecturer, Department of Computer Engineering
